# opengl-museum

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  Makefile  Object.cpp  README.md  main  main.cpp  museum.mtl  museum_final.blend  shader.frag  shader.vert
include/: mesh.h  model.h  shader.h
lib/assimp-3.1.1/: Makefile
lib/assimp-3.1.1/code/: Makefile
lib/assimp-3.1.1/tools/assimp_cmd/: Makefile
lib/glad/: glad.h
model/: museum_final.blend  museum_final.blend1
resource/: model.mtl  museum.mtl  museum_textured.mtl
src/: .museum.cpp.swp  glad.c  museum.cpp  shader.fs
